fix modals on mobile view

--- a/styles/components/createMuralModal.scss
+++ b/styles/components/createMuralModal.scss
@@ -32,7 +32,7 @@
         position: relative;
         margin: 1.75rem auto;
         border-radius: 3px;
-        max-width: 500px;
+        max-width: 90%;
         padding: 1em;
     }
 
